# oly_ai

./: .gitignore  README.md  license.txt  pyproject.toml
oly_ai/: boot.py  hooks.py  modules.txt  setup.py
oly_ai/api/: actions.py  chat.py  dashboard.py  gateway.py  stream.py  train.py  voice.py
oly_ai/config/: desktop.py
oly_ai/core/: access_control.py  cache.py  context.py  cost_tracker.py  email_handler.py  file_parser.py  long_term_memory.py  memory.py  notifications.py  pii_filter.py  provider.py  sentiment.py  sla_monitor.py  telegram_handler.py  tools.py  utils.py  web_reader.py  workflow_engine.py
oly_ai/core/rag/: __init__.py  indexer.py  retriever.py
oly_ai/oly_ai/doctype/: __init__.py
oly_ai/oly_ai/doctype/ai_access_level/: ai_access_level.json  ai_access_level.py
oly_ai/oly_ai/doctype/ai_action_request/: ai_action_request.json  ai_action_request.py
oly_ai/oly_ai/doctype/ai_audit_log/: ai_audit_log.json  ai_audit_log.py
oly_ai/oly_ai/doctype/ai_chat_message/: ai_chat_message.json  ai_chat_message.py
oly_ai/oly_ai/doctype/ai_chat_session/: ai_chat_session.json  ai_chat_session.py
oly_ai/oly_ai/doctype/ai_chat_shared_user/: ai_chat_shared_user.json  ai_chat_shared_user.py
oly_ai/oly_ai/doctype/ai_custom_tool/: ai_custom_tool.json  ai_custom_tool.py
oly_ai/oly_ai/doctype/ai_document_index/: ai_document_index.json  ai_document_index.py
oly_ai/oly_ai/doctype/ai_indexed_doctype/: ai_indexed_doctype.json  ai_indexed_doctype.py
oly_ai/public/css/: ai_panel.css
oly_ai/public/js/: oly_ai.bundle.js
oly_ai/tests/: test_security.py
(+60 files in other folders)
