[project]
name = "oly_ai"
version = "0.1.0"
description = "AI Assistant for ERPNext — provider-agnostic, upgrade-safe"
authors = [
    {name = "Kidus Kinfe", email = "kidus@oly.et"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core:buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
